# abogen

./: .gitignore  CHANGELOG.md  README.md  VOICE_MARKER_IMPLEMENTATION_PLAN.md  WINDOWS_INSTALL.bat  build_pypi.py  pyproject.toml  test_voice_markers.py
.github/workflows/: test_pip.yml  test_publish.yml
abogen/: book_handler.py  conversion.py  gui.py  main.py  queue_manager_gui.py  spacy_utils.py  subtitle_utils.py  utils.py
demo/: README.md  demo.ass  demo.txt
